--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,14 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-size: 16px;
+    font-family: Roboto, Arial, sans-serif;
+}
+
 :root {
     --dark-blue: darkblue;
 }
@@ -13,6 +24,7 @@ nav a {
 
 h1 {
     color: var(--dark-blue);
+    padding: .5rem;
 }
 
 main img {
@@ -21,26 +33,37 @@ main img {
     border: 1px solid black;
     padding: 2px;
     box-shadow: 0 0 30px gray;
+    float: right;
+    margin: 0 0 1rem 1rem;
 }
 
 p {
+    margin: 1 rem;
     padding: 0;
 }
 
 aside {
     width: 20rem;
-    margin: 1rem;
     border: 1px solid rgba(0 0 0 / 0.2); /*  */
     padding: 1em;
     background-color: brown;
     color: beige;
     text-align: center;
+    position: relative;
 }
 
 aside img {
     width: 200px;
     height: auto;
 }
+
+aside h2 {
+    position: absolute;
+    top: 220px;
+    left: 70px;
+    color: whitesmoke;
+}
+
 main {
     max-width: 840px;
 }
@@ -52,4 +75,17 @@ footer {
     margin-top: 1em;
     border-top: 1px solid #000;
     text-align: center;
+}
+
+/* Class Selectors */
+.box {
+    margin: 1.5rem;
+    border: 1px solid rgba(0,0,0,.1);
+    padding: 1rem;
+    background-color: #eee;
+    color: #000;
+}
+
+.indent {
+    padding-left: 2rem;
 }
