--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -29,6 +29,7 @@ header, main, footer {
 }
 
 h1 {
+    position: absolute;
     font-family: var(--heading-font);
     color: var(--primary-color);
 }
@@ -52,6 +53,7 @@ nav, p, section, article {
 }
 
 .hero img {
+    position: relative;
     display: block;
     width: 100%;
     height: auto;
@@ -68,7 +70,7 @@ h1 {
     color: var(--primary-color);
 }
 
-article {
+.hero article {
     position: absolute;
     top: 290px;
     width: 50%;
