--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -3,6 +3,7 @@
     --secondary-color: darkslategray;
     --accent1-color: teal;
     --accent2-color: darkblue;
+    --shadow-box: gray;
     --heading-font: "Palladio", "Lucida Sans", sans-serif;
     --body-font: Palladio, Lucida Sans, sans-serif;
 }
@@ -76,7 +77,7 @@ h1 {
     width: 50%;
     left: 420px;
     opacity: 0.9;
-    box-shadow: 0 0 10px gray;
+    box-shadow: 0 0 10px var(--shadow-box);
     padding: 4px;
     background-color: var(--primary-color);
     color: var(--accent1-color)
@@ -89,5 +90,5 @@ h1 {
     width: auto;
     border: 9px;
     margin: 9px;
-    box-shadow: 0 0 20px gray;
+    box-shadow: 0 0 20px var(--shadow-box);
 }
