--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,16 +15,24 @@ body {
 nav {
     background-color: var(--dark-blue);
     padding: 10px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 nav a {
-    color: white;
+    display: block;   
     padding: 20px;
-    display: block;    
+    text-decoration: none; 
+    font-size: 1.2rem;
+    font-weight: 700;
+    color: white;
+    
 }
 
 h1 {
     color: var(--dark-blue);
     padding: .5rem;
+    border-bottom: 10px var(--dark-blue);
 }
 
 main img {
@@ -42,6 +50,16 @@ p {
     padding: 0;
 }
 
+.grid {
+    display: grid;
+    align-items: center;
+}
+
+main {
+    grid-column: 2/3;
+    margin: 1rem;
+}
+
 aside {
     width: 20rem;
     border: 1px solid rgba(0 0 0 / 0.2); /*  */
@@ -50,6 +68,8 @@ aside {
     color: beige;
     text-align: center;
     position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
 
 aside img {
@@ -64,12 +84,7 @@ aside h2 {
     color: whitesmoke;
 }
 
-main {
-    max-width: 840px;
-}
-
-
-p { padding: 0;}
+p { padding: 3px;}
 
 footer {
     margin-top: 1em;
@@ -77,6 +92,10 @@ footer {
     text-align: center;
 }
 
+header, .grid, footer {
+    max-width: 840px;
+    margin: 0 auto;
+}
 /* Class Selectors */
 .box {
     margin: 1rem;
