--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -151,8 +151,6 @@ h2 {
 }
 
 .socialmedia {
-    display: flex;
-    align-items: flex-end;
-    align-content: space-around;
-    justify-content: space-between;
+display: flex;
+gap: 20px;
 }
