--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,8 +1,8 @@
 :root {
     --primary-color: white;
-    --secondary-color: darkslategray;
-    --accent1-color: teal;
-    --accent2-color: darkblue;
+    --secondary-color: saddlebrown;
+    --accent1-color: #172636;
+    --accent2-color: #082645;
     --shadow-box: gray;
     --heading-font: "Palladio", "Lucida Sans", sans-serif;
     --body-font: Palladio, Lucida Sans, sans-serif;
@@ -26,7 +26,7 @@
 
 body {
     font-family: var(--body-font);
-    color: var(--accent1-color);
+    color: var(--accent2-color);
 }
 
 /* impacts banner image section*/
@@ -54,7 +54,7 @@ h1 {
     padding: 26px;
     text-align: center;
     opacity: 0.7;
-    background-color: var(--accent1-color);
+    background-color: var(--accent2-color);
 }
 
 h2 {
