--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -198,8 +198,8 @@ li {
 }
 
 label [type=checkbox] {
-  width: 25px;
-  height: 25px;
+  width: 15px;
+  height: 15px;
   margin: 0 10px 0 0;
 }
 
@@ -221,16 +221,17 @@ input, select, textarea {
 
 .purpose {
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
 }
 
 input[type="radio"] {
-  display: flex;
-  width: 30px;
-  height: 20px;
+  /* display: flex; */
+  width: 15px;
+  height: 15px;
+
   /* justify-content: flex-start; */
   ;
-  align-items: center;
+  /* align-items: center; */
 }
 
 iframe {
@@ -240,8 +241,9 @@ iframe {
 
 }
 
-.purpose_options {
+#purpose_options {
   display: flex;
+  flex-direction: column;
   gap: 20px;
 }
 .map-form {
