--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -40,7 +40,7 @@ header, main, footer {
 }
 
 figcaption {
-  display: flex-column;
+  display: flex;
   margin: 0;
   padding: 0;    
   line-height: 0;
