--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -54,7 +54,7 @@ h1 {
   width: 100%;
   padding: 26px;
   text-align: center;
-  opacity: 0.7;
+  opacity: 0.9;
   background-color: var(--accent2-color);
 }
 
@@ -216,6 +216,7 @@ button {
 input, select, textarea {
   padding: 10px 10px 10px 10px;
   margin: 9px 1px 9px 1px;
+    border-radius: .2rem;
 
 }
 
