--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -106,6 +106,8 @@ thead tr, tfoot tr, td {
   margin: 50px auto 50px auto;
   width: 500px;
   align-items: center;
+  box-shadow: 0 0 10px var(--shadow-box);
+  
 }
 .navigation {
     display: flex;
@@ -282,6 +284,7 @@ button {
 
 .center-button {
   text-align: center;
+  margin-bottom: 80px;
 }
 
 input, select, textarea {
@@ -327,6 +330,7 @@ iframe {
   /* text-align: center; */
   /* border: 1px solid #000; */
   margin-top: 20px;
+  margin-bottom: 40px;
 }
 
 .offerings img {
